scrollbar fix

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     background: #222;
+    overflow: hidden;
 }
 
 /* hide original scrollbar */
